# Smart-Assistant-for-Research-Summarization

./: .gitignore  README.md  Smart Assistant Postman.json  Smart Assistant for Research Summarization.json  pyproject.toml  requirements.txt
app/: .env  llm.py  main.py  utils.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChallengeMode.tsx  DocumentSummary.tsx  FileUpload.tsx  QuestionAnswer.tsx
frontend/src/services/: api.ts
